--- a/sistema-aluno/aluno.css
+++ b/sistema-aluno/aluno.css
@@ -1,4 +1,3 @@
-
 titulo {
     display: flex;
     justify-content:space-between ;
@@ -26,18 +25,15 @@ titulo nav> a:hover {
     color:rgb(240, 17, 17)
 }
 
-
-
-
+principal {
+  border: 5px;
+}
 
 
 .principal {
     display: flex;
     height: 400px;
     border: 0px;
-    margin: 8px 0;
-    border-radius: 4px;
-    box-sizing: border-box;
 }
 
 .principal > section {
@@ -61,3 +57,43 @@ footer {
     padding-top: 100px;
 }
 
+
+input[name="nome"], section {
+    width: 50%;
+    padding: 5px 5px;
+    margin: 8px 0;
+    border-radius: 4px;
+    text-align: center;
+  }
+  
+  input[name="endereco"], section {
+    width: 50%;
+    padding: 5px 5px;
+    margin: 8px 0;
+    border-radius: 4px;
+    text-align: center;
+  }
+  
+  
+  input[type=idade], section {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type=senha], section {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    border-radius: 4px;
+  }
+  
+  input[type=email], section {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    border-radius: 4px;
+  }
+  
