--- a/sistema-aluno/lista-aluno.css
+++ b/sistema-aluno/lista-aluno.css
@@ -1,4 +1,3 @@
-
 titulo {
     display: flex;
     justify-content:space-between ;
@@ -28,12 +27,9 @@ titulo nav> a:hover {
 
 
 
-
-
-
 .principal {
     display: flex;
-    height: 400px;
+    height: 500px;
     border: 0px;
     margin: 8px 0;
     border-radius: 4px;
@@ -61,3 +57,26 @@ footer {
     padding-top: 100px;
 }
 
+#tabela {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  #tabela td, #tabela th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+  #tabela tr:nth-child(even){background-color: #f2f2f2;}
+  
+  #tabela tr:hover { 
+    background-color: #ddd;}
+  
+  #tabela th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #b2d695;
+    color: white;
+  }
