--- a/sistema-aluno/professor.css
+++ b/sistema-aluno/professor.css
@@ -1,4 +1,3 @@
-
 titulo {
     display: flex;
     justify-content:space-between ;
@@ -26,18 +25,14 @@ titulo nav> a:hover {
     color:rgb(240, 17, 17)
 }
 
-
-
-
-
+principal {
+  border: 5px;
+}
 
 .principal {
     display: flex;
     height: 400px;
     border: 0px;
-    margin: 8px 0;
-    border-radius: 4px;
-    box-sizing: border-box;
 }
 
 .principal > section {
@@ -61,3 +56,15 @@ footer {
     padding-top: 100px;
 }
 
+.box1 { 
+    background-color: rgb(142, 223, 122);
+    height: 150px;
+    width: 900px;
+    margin-left: 220px;
+  }
+
+  .box2 {
+    background-color: rgb(102, 155, 78);
+    height: 150px;
+    width: 900px;
+  }
